# cc-uax

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  cliff.toml  dev-install.ps1  dev-install.sh  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/cc-uax-cli/: Cargo.toml
crates/cc-uax-cli/src/: args.rs  lib.rs  main.rs
crates/cc-uax-cli/tests/: cli.rs
crates/cc-uax-core/: Cargo.toml
crates/cc-uax-core/src/: analysis.rs  diagnostic.rs  graph_models.rs  lib.rs  model.rs  name.rs  object.rs  package.rs  pin.rs  reader.rs  references.rs  structured_value.rs  summary.rs  version.rs
crates/cc-uax-core/src/analysis/: pcg.rs  rigvm.rs  state_tree.rs  typed.rs
crates/cc-uax-core/src/decode/: member.rs  mod.rs  pins.rs  properties.rs  rigvm.rs  window.rs
crates/cc-uax-core/src/output/: export_json.rs  graph_json.rs  mod.rs  package_json.rs  pin_json.rs  report_json.rs  sections.rs
crates/cc-uax-core/src/property/: mod.rs  tag.rs  text.rs  value.rs
crates/cc-uax-core/src/property/native/: gameplay.rs  graph.rs  material.rs  math.rs  mesh_cloth.rs  mod.rs  niagara.rs  pcg.rs  scalar.rs  sequencer.rs  state_tree.rs
crates/cc-uax-core/src/tests/: analysis.rs  mod.rs  model.rs  package.rs  pin.rs  property.rs  reader.rs  semantic_adapters.rs
crates/cc-uax-core/src/tests/common/: mod.rs
crates/cc-uax-core/src/tests/property/: containers.rs  fallback.rs  mod.rs  native.rs  tags.rs  text.rs
crates/cc-uax-project/: Cargo.toml
crates/cc-uax-project/src/: analysis_summary.rs  cache.rs  entry_points.rs  layout.rs  lib.rs  model.rs  mount.rs  scanner.rs
crates/cc-uax-project/src/tests/: analysis_summary.rs  cache.rs  common.rs  entry_points.rs  layout.rs  mod.rs  model.rs  mount.rs  scanner.rs
docs/: validation.md
scripts/: report-stackobot-gameplay.ps1  validate-real-assets.ps1  validate-real-assets.sh
skills/cc-uax/: SKILL.md
skills/cc-uax/agents/: openai.yaml
skills/cc-uax/references/: report-contract.md
src/: cache.rs  diagnostic.rs  lib.rs  main.rs  name.rs  object.rs  package.rs  pin.rs  property.rs  reader.rs  references.rs  summary.rs  version.rs
src/cli/: args.rs  cache.rs  mod.rs  reverse_refs.rs
src/cli/reverse_refs/: mod.rs  scan.rs  worker.rs
src/decode/: mod.rs
src/output/: json.rs  mod.rs  pin_json.rs  property_json.rs  sections.rs
src/property/: mod.rs  native.rs  tag.rs  text.rs  value.rs
src/property/native/: gameplay.rs  graph.rs  niagara.rs  scalar.rs
tests/: cli.rs  model.rs  package.rs  pin.rs  property.rs  reader.rs  units.rs
tests/common/: mod.rs
validation/stackobot/: Cargo.toml  manifest.json
validation/stackobot/src/: main.rs  manifest.rs
