[package]
name = "cc-uax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Parse Unreal Engine 5 .uasset/.umap packages to JSON — header, tagged properties, Blueprint node graph, and forward/reverse asset references."
license.workspace = true

[workspace]
members = ["crates/cc-uax-core"]
resolver = "3"

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[[bin]]
name = "cc-uax"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cc-uax-core = { path = "crates/cc-uax-core" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde_json = "1"

[profile.release]
opt-level = 3
