[workspace]
members = [
    "crates/cc-uax-core",
    "crates/cc-uax-project",
    "crates/cc-uax-cli",
    "validation/stackobot",
]
default-members = [
    "crates/cc-uax-core",
    "crates/cc-uax-project",
    "crates/cc-uax-cli",
    "validation/stackobot",
]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
