[package]
name = "cc-uax-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line asset and project analysis for versioned, uncooked UE5 packages."
license.workspace = true

[[bin]]
name = "cc-uax"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cc-uax-core = { path = "../cc-uax-core" }
cc-uax-project = { path = "../cc-uax-project" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
