[package]
name = "cc-uax-core"
version = "0.7.0"
edition = "2024"
rust-version = "1.88"
description = "Core parser library for Unreal Engine 5 .uasset/.umap packages."
license = "MIT"

[lib]
name = "cc_uax"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
