[package]
name = "cc-uax-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core parser library for Unreal Engine 5 .uasset/.umap packages."
license.workspace = true

[lib]
name = "cc_uax_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json_crate = { package = "serde_json", version = "1" }
