[package]
name = "cc-uax-stackobot-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

[dependencies]
anyhow.workspace = true
cc-uax-core = { path = "../../crates/cc-uax-core" }
cc-uax-project = { path = "../../crates/cc-uax-project" }
serde.workspace = true
serde_json.workspace = true
